# lichess-analysis-tools

./: pyproject.toml
lichess/: __init__.py  fetch_games.py
